--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,7 @@
   "name": "magenerds/pagedesigner",
   "description": "N/A",
   "require": {
-    "php": "~5.5.0|~5.6.0|~7.0.0",
-    "magento/framework": "100.0.*|100.1.*",
-    "magenerds/dashboard": "^1.0"
+    "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.*"
   },
   "type": "magento2-module",
   "license": [
